video overlap issue fixed

--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,8 @@ body {
     width: 100vw;
     max-height: 100vh;
     background-color: black;
+    background-size: cover;
+    overflow: hidden
 }
 
 .foodvid {
